# notsudo-advisor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: app.py  github_api.py  local_fix.py  remediation.py  scanner.py
cli/: main.py
core/: config.py
core/action/: github_client.py  pr_creator.py
core/analysis/: __init__.py  call_sites.py  evidence.py  github_clone.py  pipeline.py  preflight.py  reachability.py  semver.py  symbols.py
core/ingestion/: advisory_ingester.py  chunker.py  dependency_reader.py  osv_client.py  repo_ingester.py
core/llm/: __init__.py  client.py
core/observability/: logging.py
core/orchestration/: graph.py  nodes.py  state.py
core/retrieval/: embedder.py
core/security/: __init__.py  capability_graph.py
core/storage/: database.py  models.py  queries.py  queries.sql
core/storage/migrations/: env.py
demo_app/: package.json
demo_app/src/: server.js  utils.js
demo_app/test/: merge.test.js
docs/: DEPLOY_ONLINE.md  coding_rules.md  commits.md  demo_script.md  idea.md  system_design.md  tdd_design.md
eval/: ground_truth.jsonl  run.py
frontend/: Dashboard.html  Landing.html  dashboard.jsx  hero-scan.jsx  landing.jsx  shared.jsx  tokens.css
mcp_server/: server.py  tools.py
tests/contract/: test_embedder.py  test_github_client.py  test_osv_client.py
tests/integration/: test_advisory_ingester.py  test_advisory_vector_search.py  test_db_pool.py  test_graph.py  test_migrations.py  test_repo_ingester.py
tests/unit/: test_call_sites.py  test_capability_graph.py  test_chunker.py  test_dependency_reader.py  test_evidence.py  test_github_clone.py  test_log_emits_structured_json.py  test_mcp_server.py  test_models.py  test_nodes.py  test_osv_feed.py  test_pr_creator.py  test_remediation.py  test_remediation_plans.py  test_scan_status.py  test_semver.py
(+2 files in other folders)
