[project]
name = "notsudo"
version = "0.1.0"
description = "Agentic security tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "sentence-transformers>=2.7.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "typer>=0.12.0",
    "mcp>=1.1.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.30",
    "langchain-openai>=0.1.0"
]

[project.scripts]
notsudo = "cli.main:app"
notsudo-mcp = "mcp_server.server:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "psycopg2-binary",
    "pytest-watch>=4.2.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0"
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools.packages.find]
include = ["api", "api.*", "cli", "cli.*", "core", "core.*", "eval", "eval.*", "mcp_server", "mcp_server.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
